--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <html>
 <head>
+    <title>Rishi's Website</title>
 	<h1> Apple by Rishi </h1>
 	<hr>
     <link rel="stylesheet" href="WebStyleSheet.css">
